# duckdb-analysis-skill

./: .gitignore  README.md  SKILL.md  duckdb.md
.serena/: project.yml
scripts/: main.py  pyproject.toml
