[project]
name = "duckdb-analysis-skill"
version = "0.1.0"
description = "DuckDB data analysis tool for AI"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "pandas",
    "matplotlib",
    "seaborn",
    "openpyxl",
]

[project.scripts]
duckdb-analysis = "main:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
